# PersistentParallelTree

./: .gitignore  CMakeLists.txt  Insertes.cpp  README.md  WorkTimeMeasuring.cpp  main.cpp
Trees/: BasicPersistentTree.h  PersistentParallelTreap.h
Trees_tests/: BasicTreeTest.cpp  TreapTest.cpp
build-from-comand-line/: PersistentParallelTree  TreapTest  WorkTimeMeasuring
